[tool.poetry]
name = "comptaquest"
version = "0.0.1"
description = "Application de gestion comptable personnelle"
authors = ["Osynia"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.4"
django-environ = "^0.11.2"
django-extensions = "^3.2.3"
pillow = "^11.1.0"
psycopg2-binary = "^2.9.10"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
black = "^24.10.0"
pytest-django = "^4.9.0"
pytest-cov = "^6.0.0"
psycopg2 = "^2.9.10"
coverage = "^7.6.10"
isort = "^5.13.2"
flake8-pyproject = "^1.2.3"
flake8-bugbear = "^24.12.12"
python-webpack-boilerplate = "^1.0.3"
django-debug-toolbar = "^4.4.6"
django-pattern-library = "^1.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

